--- a/styles.scss
+++ b/styles.scss
@@ -2,7 +2,13 @@
 // background colors
 $beige: #FDFAEF;
 $red: #D24545;
+$turquoise: #30918B;
+$darkbrown: #433937;
 $body-bg: $beige; // background color
+$navbar-bg: $turquoise; 
+
+$body-color: $darkbrown;
+$navbar-hl: $red;
 
 // import fonts
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
@@ -13,6 +19,8 @@ h1,h2 {
   letter-spacing: 2px;
   font-family: $jos;
 }
+
+
 .title {
   color: $red ;
 }
